Sun Apr 26 00:18:02 1998  Havoc Pennington  <hp@pobox.com>

	* gnome-dialog.c (gnome_dialog_init): Pack the dialog's vbox 
	with expand set to TRUE.

1998-04-22  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-file-entry.c (gnome_file_entry_init): Undo the emission of
	a signal on content change, as GtkText already emitted "changed". 
Sat Apr 25 14:04:55 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock{.c,-imlib.h}: fixed apply/ok stock buttons, added trash
	and trash_full to the list of stock menu items.

Fri Apr 24 16:32:33 1998  Owen Taylor  <otaylor@gtk.org>

	* gtk-socket.c: Re-fixed destroy handling on the socket
	so that it can be destroyed correctly _and_ notifies
	the child correctly of the destruction.

Thu Apr 23 20:50:56 1998  George Lebl  <jirka@5z.com>

	* gtk-socket.c: fixed destroy handeling on the socket,
	  before it only worked if you destroyed the plug, if
	  you destroyed the socket it just messed up

1998-04-23  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-dialog.c (gnome_dialog_new): Actually set the window
	title; it was just being ignored.

Fri Apr 24 01:32:21 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock: added new icons by tigert

	* gnome-stock.c (stock_button_from_entry): added support for normal
	stock icons in stock buttons

Wed Apr 22 19:29:49 1998  Havoc Pennington  <hp@pobox.com>

	* gnome-dialog.h: Added better comments.
	* gnome-dialog.c (gnome_dialog_button_connect): New function.

1998-04-22  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-calculator.c (gnome_calculator_class_init): Register the
	signals. 

	* gnome-file-entry.c (gnome_file_entry_init): Added emission of a
	signal when the information on the entry changes. 

Wed Apr 22 16:47:49 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock: added new icons by tigert

1998-04-21  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-calculator.c (gnome_calculator_init): Add padding to
	calculator buttons. 
