@@ -847,7 +847,7 @@ static char imlib_menu_about[] = {
 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00,
 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff,
 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0x00, 0xff, 0xff,
-0x00, 0xff, 0xef, 0xeb, 0xe7, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00,
+0xfb, 0xf7, 0xef, 0xeb, 0xe7, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00,
 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0xfb, 0xf7,
 0xff, 0xfb, 0xf7, 0xff, 0xff, 0xff, 0xff, 0xfb, 0xf7, 0xff, 0xfb, 0xf7, 0xf7,
 0xf3, 0xf7, 0xff, 0xff, 0xff, 0xff, 0xfb, 0xf7, 0xff, 0xfb, 0xf7, 0xe7, 0xe3,
@@ -882,15 +882,15 @@ static char imlib_menu_about[] = {
 0x28, 0x28, 0x20, 0x18, 0x18, 0x10, 0x8e, 0x86, 0x86, 0xf7, 0xef, 0xef, 0xff,
 0xfb, 0xf7, 0xf7, 0xef, 0xef, 0xbe, 0xba, 0xb6, 0x38, 0x38, 0x30, 0xff, 0x00,
 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff,
-0x49, 0x49, 0x41, 0x38, 0x38, 0x30, 0x18, 0x18, 0x10, 0x18, 0x18, 0x10, 0x30,
-0x2c, 0x28, 0x41, 0x3c, 0x38, 0x79, 0x75, 0x69, 0x96, 0x96, 0x96, 0x8e, 0x86,
+0x49, 0x49, 0x41, 0x38, 0x38, 0x30, 0x18, 0x18, 0x10, 0x18, 0x18, 0x10, 0xff,
+0x00, 0xff, 0xff, 0x00, 0xff, 0x79, 0x75, 0x69, 0x96, 0x96, 0x96, 0x8e, 0x86,
 0x86, 0x41, 0x3c, 0x38, 0x30, 0x2c, 0x28, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff,
 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff,
-0x00, 0xff, 0x28, 0x28, 0x20, 0x49, 0x49, 0x41, 0xff, 0x00, 0xff, 0xff, 0x00,
-0xff, 0x30, 0x2c, 0x28, 0x08, 0x0c, 0x08, 0x08, 0x0c, 0x08, 0x18, 0x18, 0x10,
+0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00,
+0xff, 0xff, 0x00, 0xff, 0x08, 0x0c, 0x08, 0x08, 0x0c, 0x08, 0x18, 0x18, 0x10,
 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff,
 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00,
-0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0x61, 0x5d, 0x59,
+0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff,
 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff,
 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00,
 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff, 0xff, 0x00, 0xff,
