@@ -115,6 +115,7 @@ BEGIN_GNOME_DECLS
 #define GNOME_STOCK_PIXMAP_MAIL_SND    "Send Mail"
 #define GNOME_STOCK_PIXMAP_TRASH       "Trash"
 #define GNOME_STOCK_PIXMAP_TRASH_FULL  "Trash Full"
+#define GNOME_STOCK_PIXMAP_ABOUT       "About"
 #define GNOME_STOCK_PIXMAP_QUIT        "Quit"
 
 #define GNOME_STOCK_PIXMAP_EXIT        GNOME_STOCK_PIXMAP_QUIT
